php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28324 HTTP_SESSION_VARS appear when register_long_arrays is Off
Submitted: 2004-05-08 06:29 UTC Modified: 2005-02-10 20:41 UTC
Votes:5
Avg. Score:3.0 ± 1.8
Reproduced:2 of 2 (100.0%)
Same Version:2 (100.0%)
Same OS:1 (50.0%)
From: viper_sb at yahoo dot com Assigned:
Status: Closed Package: Session related
PHP Version: 5.0.0RC2 OS: FreeBSD 4.7
Private report: No CVE-ID: None
 [2004-05-08 06:29 UTC] viper_sb at yahoo dot com
Description:
------------
HTTP_SESSION_VARS still shows up even though register_long_arrays is off.

After inializing a session and setting a session variable HTTP_SESSION_VARS becomes avaiable, ($_SESSION is there also)

Reproduce code:
---------------
<?php
session_start();
$_SESSION['test'] = 'value';
var_dump($HTTP_SESSION_VARS);
?>

Expected result:
----------------
Notice:  Undefined variable:  HTTP_SESSION_VARS in /usr/local/www/data.web/web/test.php line 3

NULL

Actual result:
--------------
array(1) {
  ["test"]=>
  string(5) "value"
}

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-05-08 07:16 UTC] magnus@php.net
$ php
<?php
session_start();
var_dump(isset($HTTP_SESSION_VARS), ini_get('register_long_arrays'));
bool(true)
string(0) ""

 [2005-02-10 20:41 UTC] tony2001@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 11:00:01 2026 UTC