fix bug #28324 (HTTP_SESSION_VARS appear when register_long_arrays is Off)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@179503 c90b9560-bf6c-de11-be94-00142212c4b1